# census-server

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  gunicorn_conf.py  prestart.sh  pyproject.toml  start-reload.sh  start.sh
backend/census_api/: backend_pre_start.py  enums.py  main.py  models.py  utils.py
backend/census_api/alembic/: env.py
backend/census_api/alembic/versions/: 91c2a580f3c6_initial_database_schema.py  ea621955ea61_strip_micro_from_python_version.py
backend/census_api/api/: main.py
backend/census_api/api/routes/: health.py  records.py
backend/census_api/core/: config.py  database.py  dependencies.py
backend/census_api/crud/: records.py
backend/census_api/notifications/: __init__.py  base.py  discord.py
backend/census_api/services/: records.py
backend/census_api/tests/: conftest.py  test_utils.py
backend/census_api/tests/api/: test_routes.py
backend/census_api/tests/crud/: test_records.py
backend/census_api/tests/scripts/: test_backend_pre_start.py
backend/census_api/tests/services/: test_records.py
frontend/: Dockerfile  index.html  nginx-backend-not-found.conf
frontend/css/: style.css
frontend/js/: charts.js  color-modes.js
