[project]
name = "census_api"
version = "0.1.1"
description = ""
authors = [{ name = "Guillaume Mazoyer", email = "oss@mazoyer.eu" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "uvicorn[standard]>=0.38.0",
    "gunicorn>=23.0.0",
    "fastapi>=0.123.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.13",
    "alembic>=1.17.2",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "emoji-country-flag>=2.1.0",
    "greenlet>=3.1.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = ["pytest>=8.4", "pytest-asyncio>=1.3.0", "pytest-httpx>=0.35", "aiosqlite>=0.21", "mypy>=1.19", "ruff>=0.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "census_api/tests"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "ERA",   # eradicate
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FBT",   # flake8-boolean-trap
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "RUF",   # ruff specific rules
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"census_api/tests/**" = ["ARG001"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
